--- a/new-detail.html
+++ b/new-detail.html
@@ -53,65 +53,59 @@
                 </div>
                 <div class="content-main">
                   <img src="./img/new-detail-1.png" alt="">
-                  <p>Thiet ke noi that can ho chung cu 3 phong ngu chung cu Nam Phuoc la mot trong nhung du an chao nam
-                    moi 2021 cua doi ngu KTS MDA thiet ke Net noi bat cua can ho nay la ve dep sang trong va hien dai
-                    voi
-                    tong mau tram lam chu dao Chac chan day la mot tham khao tuyet voi cho quy khach dang ban khoan
-                    khong
-                    biet trang tri cho can ho cua minh nhu the nao Dung chan chu ma theo chan chung toi kham pha net doc
-                    dao trong thiet ke noi that chung cu Nam Phuoc nhe</p>
-                  <img srcset="./img/project-desc-3.png 2x" alt="">
-                  <h4>THIET KE NOI THAT PHONG KHACH – BEP CHUNG CU NAM PHUOC</h4>
-                  <p>Khong gian thoang dang tran ngap anh sang va day phong cach la nhung gi ma khong gian mo dem lai
-                    cho
-                    ngoi nha Gop chung khong gian giua phong khach va phong an khong phai la mot y tuong dien ro Dac
-                    biet
-                    no con la mot trong nhung xu huong duoc danh gia thinh hanh trong tuong lai
-                    Lua chon ti mi noi that tong mau den don gian nhung day du tien nghi nhat ton len ve hien dai va
-                    sang
-                    trong cho can phong Bo tri noi that gon gang de khong gian them thoang dang Nen go sang cao cap mang
-                    den cho can ho su sang trong hien dai</p>
-                  <h4>PHONG KHACH</h4>
-                  <p>Phong khach dat gan ban cong cung he thong cua kinh giup can phong luon hung tron nhung luong anh
-                    sang tu nhien nhat Lua chon rem cua mau xam ghi vua tao cam giac mem mai vua giup khong gian them
-                    thoang dang Hon nua viec thiet ke tran nha thach cao lom cung den tran hoa tiet re nhanh don gian
-                    vua
-                    tao chieu cao cho khong gian vua la diem nhan cho can phong them sinh dong
-                  </p>
-                  <img srcset="./img/project-desc-2.png 2x" alt="">
-                  <h4>PHONG AN</h4>
-                  <p>Khu vuc phong an thong voi phong khach duoc ngan cach nhua bang mot khoang cach vua du de khong gay
-                    cam giac qua xa hay qua gan Cac do noi that van su dung tong mau den voi thiet ke don gian hien dai
-                    Ban an mau den cung den chum thiet ke an tuong giup khong gian noi day mang dam phong cach Chau Au
-                    vua
-                    thanh lich vua phug hop voi bua com gia dinh
-                    Trang tri them tranh anh cung la mot lua chon thong minh giup khong gian noi day them phan sinh dong
-                    Ke ban tho thiet ke don gian tren cao vua thoang dang vua trang nghiem
-                  </p>
-                  <h4>PHONG NGU</h4>
-                  <p>Tong the phong ngu master duoc thiet ke sao cho toi gian do noi that nhat de khong gian them thoang
-                    dang va de chiu Van la nen go sang trong cung noi that tong mau den giup can phong them phan sang
-                    trong
-                    Giuong lon dat giua phong tham trai mau xam ghi mem mai tao khong gian em ai thu gian thoai mai nhat
-                    cho gia chu Hon nua thiet ke them ke dai mau den ngay tren dau giuong vua tien nghi ma hien dai Vach
-                    tuong son mau xam ghi la diem nhan
-                  </p>
+                  <p>Thấu hiểu được những hoang mang, bối rối mà các gia chủ đang gặp phải khi sở hữu phòng ngủ diện
+                    tích nhỏ. Mạnh Hệ đã tuyển chọn 10+ cách decor phòng ngủ nhỏ đẹp, đơn giản mà những bạn muốn tiết
+                    kiệm chi phí vẫn có thể áp dụng được, để biến hóa phòng ngủ nhỏ hẹp thành nơi nghỉ ngơi vô cùng
+                    tuyệt vời nhé!</p>
+                  <h4>Những món đồ nội thất không thể thiếu trong decor phòng ngủ</h4>
+                  <p>Để decor một căn phòng ngủ đẹp, trước tiên bạn phải có một phòng ngủ tiện nghi, đáp ứng được nhu
+                    cầu sinh hoạt và đảm bảo công năng sử dụng. Chính vì vậy, bạn cần lưu ý đến một số điểm sau khi lựa
+                    chọn những món đồ nội thất có bản cho phòng ngủ nhỏ:</p>
+                  <p><strong>Giường ngủ:</strong> là món đồ nội thất chính để đáp ứng nhu cầu nghỉ ngơi, bạn cần lựa
+                    chọn cho mình một
+                    chiếc giường ngủ thoải mái, an toàn sức khỏe với chất liệu gỗ công nghiệp hoặc gỗ tự nhiên. Vì diện
+                    tích phòng nhỏ, nên bạn có thể cân nhắc trải nệm để ngủ hoặc chọn kích thước giường đơn 1m2 nếu bạn
+                    ở một mình hoặc giường đôi 1m6 cho hai người.</p>
                   <img srcset="./img/project-desc-1.png 2x" alt="">
-                  <p>Tivi đặt đối điện giường là không gian thư giãn giải trí cho gia chủ. Kệ tủ quần áo trắng nhiều
-                    ngăn
-                    cùng kệ túi xách đặt liền nhau vừa tiện nghi, vừa là sự kết hợp hiện đại, hài hòa. Phòng ngủ đặt gần
-                    ban công, lựa chọn cửa kính để mang lại những nguồn ánh sáng tự nhiên cho căn phòng. Ánh sáng là yếu
-                    tố quan trọng giúp căn phòng thêm thoáng đãng và thoải mái.
-                    Thiết kế phòng vệ sinh đóng kín mang đến không gian sinh hoạt thoải mái tiện nghi nhất cho gia chủ.
-                    Phòng sử dụng đá ốp nhân tạo trắng cao cấp mang đến sự sang trọng hiện đại.
-
-                    Kệ tủ trắng kê cao kịch tường, Bàn học thiết kế đơn giản đặt ngay bên cửa sổ giúp mang lại không
-                    gian
-                    học tập, sáng tạo nhất cho con trẻ. Thiết kế thêm kệ giá sách ngay bên để trẻ học tập hiệu quả nhất.
-                    Rèm cửa để đều tiết ánh sáng. Hơn nữa phòng còn được thiết kế thêm giá móc quần áo để sinh hoạt con
-                    trẻ tiện nghi nhất. Như vậy, với phòng con tuy không gian có mức nhưng bằng việc tỉ mỉ và bố trí đồ
-                    nội thất một cách khoa học đã tạo nên một không gian sinh hoạt cho con trẻ tiện nghi và đầy đủ công
-                    năng nhất.</p>
+                  <p><strong>Tủ quần áo</strong>: cũng là món đồ nội thất quan trọng không kém, chiếc tủ quần áo sẽ giúp
+                    bạn “xử gọn” những món đồ linh tinh và trưng bày những bộ quần áo mình yêu thích thật ngăn nắp. Đối
+                    với phòng ngủ nhỏ, bạn có thể sắm những chiếc tủ nhựa nhỏ nhắn để đựng quần áo xếp, hoặc tủ quần áo
+                    2 cánh để treo quần áo mà không chiếm quá nhiều diện tích.</p>
+                  <p><strong>Tủ quần áo</strong>: cũng là món đồ nội thất quan trọng không kém, chiếc tủ quần áo sẽ giúp
+                    bạn “xử gọn” những món đồ linh tinh và trưng bày những bộ quần áo mình yêu thích thật ngăn nắp. Đối
+                    với phòng ngủ nhỏ, bạn có thể sắm những chiếc tủ nhựa nhỏ nhắn để đựng quần áo xếp, hoặc tủ quần áo
+                    2 cánh để treo quần áo mà không chiếm quá nhiều diện tích.</p>
+                  <img srcset="./img/new-detail-2.png 2x" alt="">
+                  <h4>10+ cách decor phòng ngủ nhỏ đơn giản mà đẹp ngất ngây</h4>
+                  <h5>1. Phối màu sơn tường decor phòng ngủ nhỏ sáng tạo</h5>
+                  <p>Vừa mang vẻ đẹp sáng tạo, vừa không chiếm nhiều diện tích, cách sử dụng màu sơn tường sáng tạo, phá
+                    cách là một trong những ý tưởng thông minh được ứng dụng nhiều nhất khi decor phòng ngủ nhỏ hẹp. Bạn
+                    có thể các tông màu pastel với các gam nóng lạnh hài hòa, hay phối các gam màu tương phản cực kỳ độc
+                    đáo.</p>
+                  <img srcset="./img/project-desc-2.png 2x" class="mb-20" style="height: 660px;" alt="">
+                  <img srcset="./img/project-desc-3.png 2x" class="mt-20" style="height: 660px;" alt="">
+                  <p>Tuy nhiên, cách decor phòng ngủ với màu sơn tường sáng tạo này chỉ thực sự phù hợp với các bạn có
+                    hoa tay và gu thẩm mỹ riêng thì mới có thể tự trang trí phòng ngủ cho mình. Còn nếu bạn là cô nàng
+                    vụn về, thì hãy thuê một đơn vị chuyên thiết kế nội thất phòng ngủ cho an toàn nhé!</p>
+                  <h5 class="mt-30">2. Decor phòng ngủ nhỏ tận dụng ánh sáng tự nhiên</h5>
+                  <p>Tối ưu ánh sáng tự nhiên cho phòng ngủ nhỏ sẽ mang lại không gian thoáng đãng, cảm giác thoải mái
+                    và rất hiệu quả trong việc tái tạo năng lượng cho chủ nhân với không khí trong lành nhờ vào ánh sáng
+                    ban mai. Nếu phòng ngủ bạn không có cửa sổ, hãy cố gắng sử dụng ánh sáng đèn để decor phòng ngủ hợp
+                    lí, tránh đề căn phòng quá u tối, bí bách nhé!</p>
+                  <img srcset="./img/new-detail-3.png 2x" alt="">
+                  <h5>3. Tự trang trí phòng ngủ nhỏ với đồ handmade</h5>
+                  <p>Đồ handmade dường như là trào lưu không bao giờ hết HOT trong trang trí phòng ngủ. Bởi những món đồ
+                    tự làm sẽ mang nét đẹp độc nhất, mang nét riêng duy nhất do chúng ta tự sáng tạo theo ý tưởng của
+                    mình. Decor phòng ngủ nhỏ bằng đồ handmade vừa giúp tiết kiệm chi phí, vừa ghi đậm dấu ấn riêng
+                    trong không gian của mình.</p>
+                  <img src="./img/new-detail-4.png" alt="">
+                  <p>Bắt kịp trào lưu của giới trẻ, những chiếc đèn led, đèn neon uốn chữ đang trở thành xu hướng được
+                    sử dụng nhiều trong trang trí phòng ngủ nhỏ cực chill. Chúng không những có thể thay thế cho những
+                    loại đèn thông thường, mà còn mang lại vẻ đẹp mới lạ, không gian huyền ảo vô cùng thích thú. <br>
+                    Mặc dù decor phòng ngủ chill sẽ mang lại sự thú vị cho chủ nhân căn phòng, nhưng bạn cũng đừng quên
+                    trang trí thêm hệ đèn màu trắng để đem đến không gian nghỉ ngơi thoải mái, nhẹ nhàng hơn nhé. Bởi
+                    nếu sinh hoạt trong phòng ngủ quá tối như thế này sẽ ở một khoảng thời gian dài dễ dẫn đến những cảm
+                    xúc tiêu cực.</p>
                 </div>
               </div>
             </div>
@@ -141,7 +135,7 @@
                   </div>
                   <div class="card-post-horizontal">
                     <a href="" class="thumbnail">
-                      <img srcset="./img/project-highlight-1.png 2x" alt="">
+                      <img srcset="./img/new-detail-1.png 2x" alt="">
                     </a>
                     <div class="content">
                       <a href="" class="title">Thiet ke noi that chung cu Kingdom voi mau</a>
@@ -150,7 +144,7 @@
                   </div>
                   <div class="card-post-horizontal">
                     <a href="" class="thumbnail">
-                      <img srcset="./img/project-highlight-2.png 2x" alt="">
+                      <img srcset="./img/new-detail-2.png 2x" alt="">
                     </a>
                     <div class="content">
                       <a href="" class="title">Thiet ke noi that chung cu Kingdom voi mau</a>
@@ -159,7 +153,7 @@
                   </div>
                   <div class="card-post-horizontal">
                     <a href="" class="thumbnail">
-                      <img srcset="./img/project-highlight-1.png 2x" alt="">
+                      <img srcset="./img/new-detail-3.png 2x" alt="">
                     </a>
                     <div class="content">
                       <a href="" class="title">Thiet ke noi that chung cu Kingdom voi mau</a>
@@ -168,7 +162,7 @@
                   </div>
                   <div class="card-post-horizontal">
                     <a href="" class="thumbnail">
-                      <img srcset="./img/project-highlight-2.png 2x" alt="">
+                      <img srcset="./img/new-detail-4.png 2x" alt="">
                     </a>
                     <div class="content">
                       <a href="" class="title">Thiet ke noi that chung cu Kingdom voi mau</a>
