--- a/project-detail.html
+++ b/project-detail.html
@@ -44,73 +44,63 @@
           <div class="row">
             <div class="col-md-9">
               <div class="content">
-                <h1 class="content-title">Thiet ke noi that chung cu Nam Phuoc phong cach toi gian</h1>
+                <h1 class="content-title">Thiết kế nội thất chung cư Nam Phước phong cách tối giản</h1>
                 <p class="create-time"><img srcset="./img/time-circle.png 2x" alt=""><span>2/11/2021</span></p>
                 <div class="content-desc">
-                  <p class="auth">KHACH HANG: ANH KIEN</p>
-                  <p class="product">Du an: <span>chung cu Nam Phuoc</span></p>
-                  <p class="style">Phong cach: <span>hien dai, sang trong</span></p>
+                  <p class="auth">KHÁCH HÀNG: ANH KIÊN</p>
+                  <p class="product">Dự án: <span>chung cư Nam Phước</span></p>
+                  <p class="style">Phong cách: <span>hiện đại, sang trọng</span></p>
                 </div>
                 <div class="content-main">
-                  <p>Thiet ke noi that can ho chung cu 3 phong ngu chung cu Nam Phuoc la mot trong nhung du an chao nam
-                    moi 2021 cua doi ngu KTS MDA thiet ke Net noi bat cua can ho nay la ve dep sang trong va hien dai
-                    voi
-                    tong mau tram lam chu dao Chac chan day la mot tham khao tuyet voi cho quy khach dang ban khoan
-                    khong
-                    biet trang tri cho can ho cua minh nhu the nao Dung chan chu ma theo chan chung toi kham pha net doc
-                    dao trong thiet ke noi that chung cu Nam Phuoc nhe</p>
+                  <p>TThiết kế nội thất căn hộ chung cư 3 phòng ngủ chung cư Nam Phước là một trong những dự án chào năm
+                    mới 2021 của đội ngũ KTS MDA thiết kế. Nét nổi bật của căn hộ này là vẻ đẹp sang trọng và hiện đại
+                    với tông màu trầm làm chủ đạo. Chắc chắn đây là một tham khảo tuyệt vời cho quý khách đăng băn khoăn
+                    không biết trang trí cho căn hộ của mình như thế nào? Đừng chần chừ mà theo chân chúng tôi khám phá
+                    nét độc đáo trong thiết kế nội thất chung cư Nam Phước nhé!</p>
                   <img srcset="./img/project-desc-3.png 2x" alt="">
-                  <h4>THIET KE NOI THAT PHONG KHACH – BEP CHUNG CU NAM PHUOC</h4>
-                  <p>Khong gian thoang dang tran ngap anh sang va day phong cach la nhung gi ma khong gian mo dem lai
-                    cho
-                    ngoi nha Gop chung khong gian giua phong khach va phong an khong phai la mot y tuong dien ro Dac
-                    biet
-                    no con la mot trong nhung xu huong duoc danh gia thinh hanh trong tuong lai
-                    Lua chon ti mi noi that tong mau den don gian nhung day du tien nghi nhat ton len ve hien dai va
-                    sang
-                    trong cho can phong Bo tri noi that gon gang de khong gian them thoang dang Nen go sang cao cap mang
-                    den cho can ho su sang trong hien dai</p>
-                  <h4>PHONG KHACH</h4>
-                  <p>Phong khach dat gan ban cong cung he thong cua kinh giup can phong luon hung tron nhung luong anh
-                    sang tu nhien nhat Lua chon rem cua mau xam ghi vua tao cam giac mem mai vua giup khong gian them
-                    thoang dang Hon nua viec thiet ke tran nha thach cao lom cung den tran hoa tiet re nhanh don gian
-                    vua
-                    tao chieu cao cho khong gian vua la diem nhan cho can phong them sinh dong
+                  <h4>THIẾT KẾ NỘI THẤT PHÒNG KHÁCH – BẾP CHUNG CƯ NAM PHƯỚC</h4>
+                  <p>Không gian thoáng đãng tràn ngập ánh sáng và đầy phong cách là những gì mà không gian mở đem lại
+                    cho ngôi nhà. Gộp chung không gian giữa phòng khách và phòng ăn không phải là một ý tưởng điên rồ.
+                    Đặc biệt nó còn là một trong những xu hướng được đánh giá thịnh hành trong tương lai. <br>
+                    Lựa chọn tỉ mỉ nội thất tông màu đen đơn giản nhưng đầy đủ tiện nghi nhất tôn lên vẻ hiện đại và
+                    sang trọng cho căn phòng. Bố trí nội thất gọn gàng để không gian thêm thoáng đãng. Nền gỗ sáng cao
+                    cấp mang đến cho căn hộ sự sang trọng, hiện đại.</p>
+                  <h4>PHÒNG KHÁCH</h4>
+                  <p>Phòng khách đặt gần ban công cùng hệ thống cửa kính giúp căn phòng luôn hứng trọn những luồng ánh
+                    sáng tự nhiên nhất. Lựa chọn rèm cửa màu xám ghi vừa tạo cảm giác mềm mại vừa giúp không gian thêm
+                    thoáng đãng. Hơn nữa việc thiết kế trần nhà thạch cao lõm, cùng đèn trần họa tiết rẽ nhánh đơn giản
+                    vừa tạo chiều cao cho không gian, vừa là điểm nhấn cho căn phòng thêm sinh động.
                   </p>
                   <img srcset="./img/project-desc-2.png 2x" alt="">
-                  <h4>PHONG AN</h4>
-                  <p>Khu vuc phong an thong voi phong khach duoc ngan cach nhua bang mot khoang cach vua du de khong gay
-                    cam giac qua xa hay qua gan Cac do noi that van su dung tong mau den voi thiet ke don gian hien dai
-                    Ban an mau den cung den chum thiet ke an tuong giup khong gian noi day mang dam phong cach Chau Au
-                    vua
-                    thanh lich vua phug hop voi bua com gia dinh
-                    Trang tri them tranh anh cung la mot lua chon thong minh giup khong gian noi day them phan sinh dong
-                    Ke ban tho thiet ke don gian tren cao vua thoang dang vua trang nghiem
+                  <h4>PHÒNG ĂN</h4>
+                  <p>Khu vực phòng ăn thông với phòng khách được ngăn cách nhua bằng một khoảng cách vừa đủ để không gây
+                    cảm giác quá xa hay quá gần. Các đồ nội thất vẫn sử dụng tông màu đen với thiết kế đơn giản, hiện
+                    đại. Bàn ăn màu đen cùng đèn chùm thiết kế ấn tượng giúp không gian nơi đây mang đậm phong cách Châu
+                    Âu vừa thanh lịch, vừa phug hợp với bữa cơm gia đình.<br>
+                    Trang trí thêm tranh ảnh cũng là một lựa chọn thông minh giúp không gian nơi đây thêm phần sinh
+                    động.Kệ bàn thờ thiết kế đơn giản trên cao, vừa thoáng đãng vừa trang nghiêm.
                   </p>
-                  <h4>PHONG NGU</h4>
-                  <p>Tong the phong ngu master duoc thiet ke sao cho toi gian do noi that nhat de khong gian them thoang
-                    dang va de chiu Van la nen go sang trong cung noi that tong mau den giup can phong them phan sang
-                    trong
-                    Giuong lon dat giua phong tham trai mau xam ghi mem mai tao khong gian em ai thu gian thoai mai nhat
-                    cho gia chu Hon nua thiet ke them ke dai mau den ngay tren dau giuong vua tien nghi ma hien dai Vach
-                    tuong son mau xam ghi la diem nhan
+                  <h4>PHÒNG NGỦ</h4>
+                  <p>Tổng thể phòng ngủ master được thiết kế sao cho tối giản đồ nội thất nhất để không gian thêm thoáng
+                    đãng và dễ chịu. Vẫn là nền gỗ sang trọng, cùng nội thất tông màu đen giúp căn phòng thêm phần sang
+                    trọng.<br>
+                    Giường lớn đặt giữa phòng, thảm trải màu xám ghi mềm mại tạo không gian êm ái thư giãn thoải mái
+                    nhất cho gia chủ. Hơn nữa thiết kế thêm kệ dài màu đen ngay trên đầu giường vừa tiện nghi mà hiện
+                    đại. Vách tường sơn màu xám ghi là điểm nhấn.
                   </p>
                   <img srcset="./img/project-desc-1.png 2x" alt="">
                   <p>Tivi đặt đối điện giường là không gian thư giãn giải trí cho gia chủ. Kệ tủ quần áo trắng nhiều
-                    ngăn
-                    cùng kệ túi xách đặt liền nhau vừa tiện nghi, vừa là sự kết hợp hiện đại, hài hòa. Phòng ngủ đặt gần
-                    ban công, lựa chọn cửa kính để mang lại những nguồn ánh sáng tự nhiên cho căn phòng. Ánh sáng là yếu
-                    tố quan trọng giúp căn phòng thêm thoáng đãng và thoải mái.
+                    ngăn cùng kệ túi xách đặt liền nhau vừa tiện nghi, vừa là sự kết hợp hiện đại, hài hòa. Phòng ngủ
+                    đặt gần ban công, lựa chọn cửa kính để mang lại những nguồn ánh sáng tự nhiên cho căn phòng. Ánh
+                    sáng là yếu tố quan trọng giúp căn phòng thêm thoáng đãng và thoải mái. <br>
                     Thiết kế phòng vệ sinh đóng kín mang đến không gian sinh hoạt thoải mái tiện nghi nhất cho gia chủ.
-                    Phòng sử dụng đá ốp nhân tạo trắng cao cấp mang đến sự sang trọng hiện đại.
-
-                    Kệ tủ trắng kê cao kịch tường, Bàn học thiết kế đơn giản đặt ngay bên cửa sổ giúp mang lại không
-                    gian
-                    học tập, sáng tạo nhất cho con trẻ. Thiết kế thêm kệ giá sách ngay bên để trẻ học tập hiệu quả nhất.
-                    Rèm cửa để đều tiết ánh sáng. Hơn nữa phòng còn được thiết kế thêm giá móc quần áo để sinh hoạt con
-                    trẻ tiện nghi nhất. Như vậy, với phòng con tuy không gian có mức nhưng bằng việc tỉ mỉ và bố trí đồ
-                    nội thất một cách khoa học đã tạo nên một không gian sinh hoạt cho con trẻ tiện nghi và đầy đủ công
-                    năng nhất.</p>
+                    Phòng sử dụng đá ốp nhân tạo trắng cao cấp mang đến sự sang trọng hiện đại.</p>
+                  <p>Kệ tủ trắng kê cao kịch tường, Bàn học thiết kế đơn giản đặt ngay bên cửa sổ giúp mang lại không
+                    gian học tập, sáng tạo nhất cho con trẻ. Thiết kế thêm kệ giá sách ngay bên để trẻ học tập hiệu quả
+                    nhất. Rèm cửa để đều tiết ánh sáng. Hơn nữa phòng còn được thiết kế thêm giá móc quần áo để sinh
+                    hoạt con trẻ tiện nghi nhất. Như vậy, với phòng con tuy không gian có mức nhưng bằng việc tỉ mỉ và
+                    bố trí đồ nội thất một cách khoa học đã tạo nên một không gian sinh hoạt cho con trẻ tiện nghi và
+                    đầy đủ công năng nhất.</p>
                 </div>
               </div>
             </div>
