--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
               </div>
             </div>
             <div class="contact-form">
-              <h3 class="title text-center">Đăng ký tư vấn</h3>
+              <h3 class="title title-main">Đăng ký tư vấn</h3>
               <h4 class="sologan text-center">Liên hệ ngay với chúng tôi</h4>
               <form action="" class="contact-form-inner">
                 <div class="d-md-flex">
@@ -68,7 +68,7 @@
         </div>
       </section>
       <section class="wp-map">
-        <h4 class="title">Bản đồ</h4>
+        <h4 class="title title-main">Bản đồ</h4>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.9517061834117!2d108.2154480148585!3d16.067995688881673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142184ae58c27bd%3A0x97e949e77a78266a!2zSMO5bmcgVsawxqFuZywgxJDDoCBO4bq1bmcgNTUwMDAw!5e0!3m2!1sen!2s!4v1637106635231!5m2!1sen!2s"
           width="100%" height="762" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
