--- a/product-cate.html
+++ b/product-cate.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>PAGE SAN PHAM</title>
+  <title>PAGE DANH MUC SAN PHAM</title>
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css" />
   <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css" />
@@ -29,56 +29,35 @@
   <div class="wrapper">
     <header class="header"></header>
     <main class="wp-content">
-      <h1 class="title-main title-product-cate">Sản phẩm</h1>
+      <div class="wp-breadcumb breadcumb-product-cate">
+        <nav aria-label="breadcrumb">
+          <div class="container">
+            <ol class="breadcrumb p-0 mb-0">
+              <li class="breadcrumb-item"><a href=""><img srcset="./img/home.png 2x" alt=""></a></li>
+              <li class="breadcrumb-item"><a href="#">Sản phẩm</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Phòng ngủ</li>
+            </ol>
+          </div>
+        </nav>
+      </div>
       <section>
         <div class="container">
-          <div class="product-cate">
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-1.png" alt=""></a>
-              <h3>Phòng ngủ</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-2.png" alt=""></a>
-              <h3>Phòng khách</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-3.png" alt=""></a>
-              <h3>Phòng ăn</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-4.png" alt=""></a>
-              <h3>Ghế văn phòng</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-5.png" alt=""></a>
-              <h3>Bàn làm việc</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-6.png" alt=""></a>
-              <h3>Cửa gỗ</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-7.png" alt=""></a>
-              <h3>Ghế sofa đơn</h3>
-            </div>
-            <div class="product-cate-item">
-              <a href="" class="thumbnail"><img src="./img/product-cate-8.png" alt=""></a>
-              <h3>Tất cả nội thất</h3>
+          <div class="search-cate">
+            <span>Danh mục</span>
+            <div class="dropdown search-cate-dropdown">
+              <button class="btn dropdown-toggle" type="button" id="searchCateDropdown" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Phòng ngủ
+                <i class="fa fa-sort-desc" aria-hidden="true"></i>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="searchCateDropdown">
+                <a class="dropdown-item" href="#">Phòng khách</a>
+                <a class="dropdown-item" href="#">Phòng bếp</a>
+                <a class="dropdown-item" href="#">Phòng sinh hoạt</a>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="product-highlight">
-        <div class="container">
-          <div class="product-highlight-title">
-            <h3 class="title-main">Sản phẩm nổi bật</h3>
-            <div class="product-highlight-tab">
-              <span class="active pl-0">Sản phẩm mới</span>
-              <span class="reivew-best">Sản phẩm đánh giá tốt nhất</span>
-              <span class="pr-0">Sản phẩm bán chạy nhất</span>
-            </div>
-          </div>
-          <div class="list-product">
+          <div class="list-product list-product-cate">
             <div class="product-item">
               <a href="" class="product-thumbnail"><img src="./img/product-1.png" alt=""></a>
               <a href="" class="product-name">KACHI – Bàn chữ nhật Eames</a>
@@ -206,173 +185,19 @@
               </div>
             </div>
           </div>
-          <button class="btn-text"><a href="">Xem thêm</a></button>
-        </div>
-      </section>
-      <section class="register-advise">
-        <div class="register-title">
-          <h3 class="title-main">Đăng ký tư vấn</h3>
-          <p>Liên hệ ngay với chúng tôi</p>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 offset-lg-3 col-lg-6 ">
-              <form action="" class="contact-form-inner">
-                <div class="d-md-flex">
-                  <input type="text" class="mr-md-3" placeholder="Họ và tên">
-                  <input type="text" class="ml-md-3" placeholder="Số điện thoại">
-                </div>
-                <div class="d-md-flex">
-                  <input type="text" class="mr-md-3" placeholder="Email">
-                  <input type="text" class="ml-md-3" placeholder="Tiêu đề">
-                </div>
-                <div class="d-md-flex">
-                  <textarea name="" class="w-100" placeholder="Lời nhắn"></textarea>
-                </div>
-                <button class="contact-form-submit">Đăng ký</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="customer">
-        <div class="container">
-          <div class="sub-title">
-            <h2>Đối tác</h2>
-            <p>Những dự án nổi bật làm nên tên tuổi của Kiến Trúc & Nội Thất Minh Đức</p>
-            <div class="bg-left">
-              <div class="bg-top"></div>
-              <div class="bg-bottom"></div>
-            </div>
-          </div>
-          <div class="owl-carousel owl-theme customer-slider">
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/go-viet.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/Vingroup.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/muong-thanh.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/melisa.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/biluxury.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/go-viet.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/Vingroup.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/muong-thanh.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/melisa.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/biluxury.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/go-viet.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/Vingroup.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/muong-thanh.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/melisa.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/biluxury.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/go-viet.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/Vingroup.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/muong-thanh.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/melisa.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/biluxury.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/go-viet.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/Vingroup.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/muong-thanh.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/melisa.svg" alt="" />
-              </div>
-            </div>
-            <div class="item">
-              <div class="customer-item">
-                <img src="./img/biluxury.svg" alt="" />
-              </div>
-            </div>
-          </div>
+          <ul class="pagi pagi-list-new">
+            <li class="pagi-item pagi-action pagi-prev is-disabled">
+              <a href=""><i class="fa fa-angle-left"></i></a>
+            </li>
+            <li class="pagi-item is-active"><a href="">1</a></li>
+            <li class="pagi-item"><a href="">2</a></li>
+            <li class="pagi-item"><a href="">3</a></li>
+            <li class="pagi-item"><a href="">4</a></li>
+            <li class="pagi-item"><a href="">5</a></li>
+            <li class="pagi-item pagi-action pagi-next">
+              <a href=""><i class="fa fa-angle-right"></i></a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
