--- a/room-detail.html
+++ b/room-detail.html
@@ -143,7 +143,7 @@
   </div>
 
   <script src="libs/jquery-3.4.1.min.js"></script>
-  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+  <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="libs/OwlCarousel/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 </body>
